# ead1-sgi

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: trabalho-pgp.md
src/pgp_chat/: __init__.py  cli.py  keys.py  messages.py  storage.py
tests/: conftest.py  test_keys.py  test_messages.py
