[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pgp-chat-sgi"
version = "1.0.0"
description = "Demo PGP em app de mensagens - Trabalho SGI"
requires-python = ">=3.9"
dependencies = [
    "python-gnupg>=0.5.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
pgp-chat = "pgp_chat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
